--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "homepage": "http://www.jonasarts.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.0",
         "symfony/framework-bundle": "~2.3"
