--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-    jonasarts.pagination_manager.class: jonasarts\Bundle\PaginationBundle\PaginationManager
+    jonasarts.pagination.class: jonasarts\Bundle\PaginationBundle\Services\Pagination
 
 services:
-    pagination_manager:
-        class: %jonasarts.pagination_manager.class%
+    pagination:
+        class: %jonasarts.pagination.class%
         arguments: [ @service_container, @twig ]
